load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

exports_files([
    "go.mod",
    "go.sum",
])

go_library(
    name = "lib",
    srcs = ["main.go"],
    importpath = "github.com/kchygoe/gcsproxy",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_go_chi_chi_v5//:go_default_library",
        "@com_github_go_chi_chi_v5//middleware:go_default_library",
        "@com_google_cloud_go_storage//:go_default_library",
        "@org_golang_google_api//option:go_default_library",
    ],
)

go_binary(
    name = "gcsproxy",
    embed = [":lib"],
    visibility = ["//visibility:public"],
)
