load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

exports_files([
    "go.mod",
    "go.sum",
])

go_library(
    name = "lib",
    srcs = ["main.go"],
    importpath = "github.com/kchygoe/gcsproxy",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_go_chi_chi_v5//:chi",
        "@com_github_go_chi_chi_v5//middleware",
        "@com_google_cloud_go_storage//:storage",
        "@org_golang_google_api//iam/v1:iam",
        "@org_golang_google_api//option",
    ],
)

go_binary(
    name = "gcsproxy",
    embed = [":lib"],
    visibility = ["//visibility:public"],
)
