module(
    name = "com_github_kchygoe_gcsproxy",
    version = "1.0",
)

bazel_dep(name = "bazel_skylib", version = "1.4.2")

bazel_dep(name = "rules_go", version = "0.39.1")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")

go_sdk.download(
    name = "go_default_sdk",
    version = "1.19.4",
)
use_repo(go_sdk, "go_default_sdk_toolchains")

register_toolchains("@go_default_sdk_toolchains//:all")

bazel_dep(name = "gazelle", version = "0.32.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")

go_deps.from_file(go_mod = "//:go.mod")

use_repo(go_deps)

internal_go_deps = use_extension("@//third_party:go_deps.bzl", "go_deps")

use_repo(internal_go_deps)
