module(
    name = "com_github_kchygoe_gcsproxy",
    version = "1.0",
)

bazel_dep(name = "bazel_skylib", version = "1.4.2")
bazel_dep(name = "rules_go", version = "0.41.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.32.0")

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.19.4")
go_sdk.host()

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

internal_go_deps = use_extension("@//third_party:go_deps.bzl", "go_deps")
use_repo(internal_go_deps)

# https://github.com/bazelbuild/rules_go/issues/3625
go_deps.gazelle_override(
    directives = [
        "gazelle:proto disable",
    ],
    path = "github.com/googleapis/gax-go/v2",
)
use_repo(
    go_deps,
    "com_github_go_chi_chi_v5",
    "com_google_cloud_go_storage",
    "org_golang_google_api",
)

bazel_dep(name = "rules_oci", version = "1.3.1")
bazel_dep(name = "buildifier_prebuilt", version = "6.3.3")
