load("@gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/kchygoe/gcsproxy
gazelle(name = "gazelle")

gazelle(
    name = "update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=third_party/go_deps.bzl%_go_deps",
        "-prune",
    ],
    command = "update-repos",
)
